--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastFood.com</title>
-    <link rel="shortcut icon" href="Image/Favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1068px)" href="Css/Phone.css">
+    <link rel="shortcut icon" href="Favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1068px)" href="Phone.css">
 </head>
 
 <body>
     <header>
         <nav id="navbar">
             <div id="logo">
-                <img src="image/Logo.jpeg" alt="FastFood.com">
+                <img src="Logo.jpeg" alt="FastFood.com">
             </div>
 
             <ul>
